--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,70 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+@media screen and (max-width: 500px) {
+
+    header {
+        padding: 15px 0px;
+    }
+
+    header > nav > a {
+        font-size: 1.7rem;
+        line-height: 1.5rem;
+        padding: 0px 10px;
+    }
+
+    .title-container {
+        width: 100%;
+    }
+
+    .title-container > div {
+        width: 100%;
+        height: 400px;
+        margin-bottom: 1px;
+        background-repeat: no-repeat;
+        background-size: 270% auto;
+
+    }
+
+    .title-container > div > h1 {
+        font-size: 4rem;
+        line-height: 4.5rem;
+    }
+
+    .title-container > div > button {
+        font-size: 1.2rem;
+        margin-top: .5rem;
+        padding: 7px 25px;
+        border-radius: 0;
+        transition: none;
+    }
+
+    .title-container > hr {
+        width: 100%;
+    }
+
+    .artists-container {
+        flex-direction: column;
+        align-content: center;
+    }
+
+    .artist {
+        width: 85%;
+        margin: 0 auto;
+    }
+
+    .artist > img {
+        width: 60%;
+        height: auto;
+    }
+
+    .artist > a {
+        font-size: 1.15rem;
+    }
+
+    .bio {
+        font-size: .8rem;
+    }
+
+}
