--- a/css/index.css
+++ b/css/index.css
@@ -26,8 +26,16 @@ html{
 body{
     font-size:1.6rem;
     line-height: 1.5;
-    font-family: 'Raleway', sans-serif;	
+    font-family: 'Raleway', sans-serif;
+    background-color: black;	
 }
+
+#siteWrapper {
+    max-width: 65%;
+    margin: 0 auto;
+    background-color: white;	
+}
+
 h1, p, .name, .bio {	
     font-family: 'Raleway', sans-serif;	
     text-align: center;	
@@ -134,8 +142,8 @@ button:hover{
     text-align:center;
 }
 .artist img{
-    width:85%;
-    height: 25vw;
+    width:18vw;
+    height: 16vw;
     margin-bottom: 10px;
 }
 
@@ -150,6 +158,10 @@ button:hover{
 }
 
 @media screen and (max-width: 500px) {
+
+    #siteWrapper {
+        max-width: 100vw;
+    }
 
     header {
         padding: 15px 0px;
@@ -194,6 +206,7 @@ button:hover{
     .artists-container {
         flex-direction: column;
         align-content: center;
+        max-width: 70vw;
     }
 
     .artist {
@@ -202,8 +215,8 @@ button:hover{
     }
 
     .artist > img {
-        width: 60%;
-        height: auto;
+        width:47vw;
+        height: 38vw;
     }
 
     .artist > a {
